@@ -22,6 +22,7 @@ date Version 3.00.51
 * FS#258 - "wxRadioButton enabled value not respected" (patch from Joel Low)
 * FS#256 - "Gererating Inherited class in different folder output malformed code"
 * FS#268 - "[OS X] crashes upon termination" (patch from Auria)
+* FS#277 - "crash on using icon/bitmap resource"
 
 09/27/2007 Version 3.00.50 (RC3)
 * FS#234 - "wxFrame name parameter not available."
